--- a/css/styles.css
+++ b/css/styles.css
@@ -204,7 +204,7 @@ header{
     margin-bottom: 30px;
 }
 .hero .button{
-    background: #2196F3;
+    background: var(--accent-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     padding: 10px 32px;
@@ -249,7 +249,6 @@ header{
     
     min-height: 581px;
     min-width: 528px;
-    padding: 15px;
     background-color: #FFFFFF;
     box-shadow: 0px 1px 3px rgb(0 0 0 / 12%), 0px 1px 1px rgb(0 0 0 / 14%), 0px 2px 1px rgb(0 0 0 / 20%);
     border-radius: 4px;
@@ -280,6 +279,7 @@ header{
 }
 .button-close:hover{
     cursor: pointer;
+    fill: var(--accent-color);
 }
 .modal-title{
     font-family: var(--main-font);
@@ -287,50 +287,59 @@ header{
     font-size: 20px;
     line-height: 23px;
     text-align: center;
-    letter-spacing: 0.03em;
     color: var(--title-text-color);
-    margin-top: 40px;
-    margin-bottom: 12px;
 }
 .modal-form{
-    display: flex;
-    flex-direction: column;
-    
-}
-.modal-form-input{
-    width: 100%;
-    height: 40px;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
-    padding-left: 40px;
-    outline: none;
-    transition: outline-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal-form-input:hover,
-.modal-form-input:focus{
-    border-color: var(--accent-color);
-    cursor: pointer;
-    
-}
-.modal-form-input:hover +.form-icon,
-.modal-form-input:focus +.form-icon{
-    fill: var(--accent-color);
+    padding: 40px;
 }
 .form-list{
+    margin-top: 12px;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+}
+.form-list label{
     font-family: var(--main-font);
     font-weight: normal;
     font-size: 12px;
     line-height: 14px;
     letter-spacing: 0.01em;
-    display: inline-block;
-    margin-bottom: 10px;
-    margin-left: 41px;
-    margin-right: 39px;
+    color: var(--normal-text-color);
+    margin-bottom: 4px;
+    align-items: center;
+    justify-content: center;
 }
-.form-list-wrap{
-    position: relative;
-    display: block;
-    margin-top: 4px;
+
+.form-list input{
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    height: 40px;
+    padding-left: 40px;
+    outline: none;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-list textarea:focus,
+.form-list input:focus,
+.form-list textarea:hover,
+.form-list input:hover{
+    border-color: var(--accent-color);
+    cursor: pointer;
+}
+
+.form-list input:hover + .form-icon,
+.form-list input:focus + .form-icon{
+    fill: var(--accent-color);
+}
+
+.form-list textarea{
+    min-height: 120px;
+    padding: 12px 16px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    height: 40px; 
+    outline: none;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-icon{
     display: flex;
@@ -338,106 +347,85 @@ header{
     justify-content: center;
     position: absolute;
     transform: translateY(-50%);
-    top: 50%;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    top: 63%;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     left: 12px;
 }
-.form-comment{
-    width: 100%;
-    height: 120px;
-    resize: none;
-    padding: 12px 16px;
-    margin-top: 4px;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
-    outline: none;
-}
-.form-list .form-comment{
+.form-list textarea::placeholder{
     font-family: var(--main-font);
     font-weight: normal;
     font-size: 14px;
     line-height: 16px;
     letter-spacing: 0.01em;
-    color: rgba(117, 117, 117, 0.5);  
-    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), outline-color 250ms cubic-bezier(0.4, 0, 0.2, 1);  
+
+    color: rgba(117, 117, 117, 0.5);
 }
-.form-list .form-comment:hover,
-.form-list .form-comment:focus{
-    border-color: var(--accent-color);
-    cursor: pointer;
+[for="modal-contract"] {
+    display: flex;
 }
-.form-check-wrap{
-    width: 16px;
-    height: 15px;
-    display: inline-block;
-    border-radius: 4px;
-    background: #FFFFFF;
-    border: 0.2px solid var(--title-text-color);
-    fill: #FFFFFF;
-    vertical-align: middle;
+#modal-contract{
+    width: 1px;
+    height: 1px;
+    opacity: 0;
+    align-items: center;
 }
-/* .form-check:checked + .form-check-policy .form-check-wrap{
-    background-color: var(--accent-color);
-    border-color: var(--accent-color);
-    
+.contract-text{
+    font-family: var(--main-font);
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: 0.03em;
+    color: var(--normal-text-color);
 }
-.form-list .form-check-wrap:checked + .check-icon {
-    background-color: var(--accent-color);
-    border: none;
-    cursor: pointer;
-} */
-.check-icon{
-    display: inline-block;
-    border: 2px solid #FFFFFF;
-    border-radius: 4px;
+.contract-text a{
+    text-decoration-line: underline;
+    color: var(--accent-color);
+}
+.check-icon-box{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin-right: 7px;
+    cursor: pointer;
+    width: 16px;
+    height: 15px;    
+    border: 2px solid rgba(33, 33, 33, 1);
+    border-radius: 2px;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    fill: #FFFFFF;
 }
-.check-icon:hover,
-.check-icon:focus {
-   border-color: var(--accent-color);
-   cursor: pointer;
+.checkbox:checked+.check-icon-box {
+    background-color: var(--accent-color);
+    border-color: var(--accent-color);
+    background-size: contain;
+    background-origin: border-box;
+}
+.modal-button-box{
+    justify-content: center;
 }
 .modal-button{
+    width: 200px;
+    height: 50px;
+    background: var(--accent-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    margin-top: 30px;
+    font-family: Roboto;
+    
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 30px;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
+    color: #FFFFFF;
     align-self: center;
 }
-
-/* .modal-form{
-    width: 448px;
-    margin-top: 12px;
-    margin-left: auto;
-    margin-right: auto;
+.modal-button:hover,
+.modal-button:focus{
+    background: #147fd6;
+    cursor: pointer;
 }
-.form-list{
-    position: relative;
-    content: "";
-    margin-bottom: 12px;
-    display: flex;
-    flex-direction: column;
-}
-.form-list:nth-child(4){
-    margin-bottom: 20px;
-}
-.form-icon{
-    position: absolute;
-    content: "";
-    top: 67%;
-    left: 17px;
-    transform: translateY(-67%);
-    color: var(--title-text-color);
-    fill: currentColor;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.form-input{
-    margin-top: 4px;
-    height: 40px;
-    font-size: 14px;
-    border: 1px solid #21212133;
-    border-radius: 4px;
-    padding: 12px 42px;
-    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transition: outline-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-} */
-
 
 /* section */
 .hiden{
