--- a/css/styles.css
+++ b/css/styles.css
@@ -420,7 +420,7 @@ header{
     letter-spacing: 0.06em;
     color: #FFFFFF;
     align-self: center;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
+    transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 .modal-button:hover,
 .modal-button:focus{
